test/corpus/hylo/parsing/NumberFollowedByELineCommentInBetween.txt
=====================================
NumberFollowedByELineCommentInBetween
=====================================

//- parse expecting: success

public fun main() {
  var x = 0 //hello
  eat(x)
}

---

(source_file
  (single_line_comment)
  (function_decl
    (function_head
      (access_modifier)
      (function_name
        (identifier)))
    (function_signature)
    (brace_stmt
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (integer_literal
            (decimal_literal))))
      (single_line_comment)
      (stmt
        (function_call_expr
          (selector_expr
            (selector
              (identifier_expr
                (identifier))))
          (call_argument
            (selector_expr
              (selector
                (identifier_expr
                  (identifier))))))))))
