test/corpus/hylo/parsing/NumberFollowedByESemiInBetween.txt
===============================
NumberFollowedByESemiInBetween
===============================

//- parse expecting: success

public fun main() {
  var x = 0; eat(x)
}

---

(source_file
  (single_line_comment)
  (function_decl
    (function_head
      (access_modifier)
      (function_name
        (identifier)))
    (function_signature)
    (brace_stmt
      (stmt
        (binding_decl
          (binding_pattern
            (binding_introducer)
            (identifier))
          (expr
            (integer_literal
              (decimal_literal)))))
      (stmt
        (expr
          (function_call_expr
            (value_member_expr
              (selector
                (identifier_expr
                  (identifier))))
            (call_argument
              (expr
                (value_member_expr
                  (selector
                    (identifier_expr
                      (identifier))))))))))))
